# all-the-plugins

./: .drone.yml  ReadMe.md
non_catalog_apps/mp_flipper/: .gitignore  CHANGELOG.md  LICENSE.txt  Makefile  README.md  application.fam  flipper.json  package-lock.json  package.json  publish.sh  pyproject.toml  requirements.txt  upython.c  upython.h  upython_cli.c  upython_file.c  upython_repl.c  upython_splash.c
non_catalog_apps/mp_flipper/docs/: CHANGELOG.md  README.md
non_catalog_apps/mp_flipper/docs/pages/: conf.py  examples.rst  features.md  index.rst  license.rst  quickstart.rst  reference.rst  roadmap.md
non_catalog_apps/mp_flipper/examples/: dict_test.py  flipperzero_adc_test.py  flipperzero_canvas_test.py  flipperzero_dialog_message_test.py  flipperzero_draw_on_input_test.py  flipperzero_gpio_input_test.py  flipperzero_gpio_interrupt_test.py  flipperzero_gpio_test.py  flipperzero_infrared_test.py  flipperzero_input_test.py  flipperzero_light_test.py  flipperzero_pwm_test.py  flipperzero_speaker_note_test.py  flipperzero_speaker_test.py  flipperzero_vibro_test.py  gc_test.py  greeter_test.py  import_error_test.py  import_test.py  infrared_signal_viewer.py  logger.py  open.py  overflow_test.py  raise_test.py  rand_test.py  sleep_test.py  tic_tac_toe.py  try_except_test.py  uart.py
non_catalog_apps/mp_flipper/flipperzero/: README.md  _adc.py  _canvas.py  _dialog.py  _gpio.py  _infrared.py  _input.py  _light.py  _pwm.py  _speaker.py  _uart.py  _vibro.py  io.py  logging.py
non_catalog_apps/mp_flipper/lib/micropython-port/: mp_flipper_context.h  (+20 more)
(+807 files in other folders)
